--- a/04 Lab/css/style.css
+++ b/04 Lab/css/style.css
@@ -101,3 +101,10 @@ footer {
 .customer-info {
     margin-right: 20px;
 }
+
+/*WORK DEAR GOD*/
+textarea {
+    width: 100%;
+    height: 100%;
+    min-height: 100px; /* Ensures a minimum height */
+}
